src/asm/node/snapshots/ka_pi__asm__node__signature__test__class_signatures.snap
---
source: src/asm/node/signature.rs
expression: class_signature
---
Class:
  formal_type_parameters:
    - parameter_name: T
      class_bound:
        Array:
          Class: java/lang/Object
      interface_bounds: []
  super_class:
    Class: java/lang/Object
  interfaces:
    - Class: java/lang/Runnable

