src/asm/node/snapshots/ka_pi__asm__node__signature__test__field_signatures.snap
---
source: src/asm/node/signature.rs
expression: field_signature
---
Field:
  field_type:
    Class: java/lang/Object

